--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <!-- <link rel="stylesheet" type="text/css" href="epoch-0.8.4/tests/render/css/tests.css"> -->
-        <link rel="stylesheet" type="text/css" href="./tests.css">
-        <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-        <script src="http://d3js.org/d3.v3.js" charset="utf-8"></script>
-        <script src="./epoch-0.8.4/dist/js/epoch.js"></script>
-        <link rel="stylesheet" type="text/css" href="./epoch-0.8.4/dist/css/epoch.css">
+        <link rel="stylesheet" type="text/css" href="./css/tests.css">
+        <script src="./jquery/jquery-3.3.1.min.js"></script>
+        <script src="./d3.v3.js" charset="utf-8"></script>
+        <script src="./epoch/js/epoch.js"></script>
+        <link rel="stylesheet" type="text/css" href="./epoch/css/epoch.css">
         <script>
             var nextTime = (function() {
                 var currentTime = parseInt(new Date().getTime() / 1000);
