--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <!-- <link rel="stylesheet" type="text/css" href="epoch-0.8.4/tests/render/css/tests.css"> -->
         <link rel="stylesheet" type="text/css" href="./css/tests.css">
         <script src="./jquery/jquery-3.3.1.min.js"></script>
-        <script src="./d3/d3.v3.js" charset="utf-8"></script>
+        <!-- <script src="./d3/d3.v3.js" charset="utf-8"></script> -->
+        <script src="https://d3js.org/d3.v5.js"></script>
         <script src="./epoch/js/epoch.js"></script>
         <link rel="stylesheet" type="text/css" href="./epoch/css/epoch.css">
         <script>
