--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <!-- <link rel="stylesheet" type="text/css" href="epoch-0.8.4/tests/render/css/tests.css"> -->
-        <link rel="stylesheet" type="text/css" href="./tests.css">
+        <link rel="stylesheet" type="text/css" href="./css/tests.css">
         <script src="./jquery/jquery-3.3.1.min.js"></script>
         <script src="./d3/d3.v3.js" charset="utf-8"></script>
         <script src="./epoch/js/epoch.js"></script>
